--- a/frontend/demo_light/requirements.txt
+++ b/frontend/demo_light/requirements.txt
@@ -1,130 +1,10 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-alembic==1.13.2
-altair==5.3.0
-annotated-types==0.7.0
-anyio==4.4.0
-attrs==23.2.0
-Babel==2.15.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
-blinker==1.8.2
-cachetools==5.4.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-colorlog==6.8.2
-courlan==1.2.0
-datasets==2.14.7
-dateparser==1.2.0
-dill==0.3.7
-distro==1.9.0
-dspy-ai==2.4.9
-filelock==3.15.4
-frozenlist==1.4.1
-fsspec==2023.10.0
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.0.3
-grpcio==1.65.1
-grpcio-tools==1.65.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-htmldate==1.8.1
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.24.1
-hyperframe==6.0.1
-idna==3.7
-intel-openmp==2021.4.0
-Jinja2==3.1.4
-joblib==1.3.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jusText==3.0.1
-knowledge-storm==0.2.3
-langchain-core==0.2.23
-langchain-huggingface==0.0.3
-langchain-qdrant==0.1.2
-langchain-text-splitters==0.2.2
-langsmith==0.1.93
-lxml==5.2.2
-lxml_html_clean==0.1.1
-Mako==1.3.5
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mkl==2021.4.0
-mpmath==1.3.0
-multidict==6.0.5
-multiprocess==0.70.15
-networkx==3.3
-numpy==1.26.4
-openai==1.37.0
-optuna==3.6.1
-orjson==3.10.6
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-pip==24.0
-portalocker==2.10.1
-protobuf==5.27.2
-pyarrow==17.0.0
-pyarrow-hotfix==0.6
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-qdrant-client==1.10.1
-referencing==0.35.1
-regex==2024.5.15
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.19.0
-safetensors==0.4.3
-scikit-learn==1.5.1
-scipy==1.14.0
-sentence-transformers==3.0.1
-setuptools==65.5.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.31
-streamlit==1.36.0
-streamlit-card==1.0.2
-streamlit-float==0.3.5
-streamlit-option-menu==0.3.13
-structlog==24.4.0
-sympy==1.13.1
-tbb==2021.13.0
-tenacity==8.5.0
-threadpoolctl==3.5.0
-tld==0.13
-tokenizers==0.19.1
-toml==0.10.2
-toolz==0.12.1
-torch==2.3.1
-tornado==6.4.1
-tqdm==4.66.4
-trafilatura==1.11.0
-transformers==4.43.1
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
-ujson==5.10.0
-Unidecode==1.3.8
-urllib3==2.2.2
-watchdog==4.0.1
-wikipedia==1.4.0
-xxhash==3.4.1
-yarl==1.9.4
+streamlit==1.31.1
+streamlit-card
+markdown
+unidecode
+extra-streamlit-components==0.1.60
+streamlit_extras
+deprecation==2.1.0
+st-pages==0.4.5
+streamlit-float
+streamlit-option-menu
