--- a/frontend/demo_light/Dockerfile
+++ b/frontend/demo_light/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && \
 COPY requirements.txt .
 RUN python3 -m venv venv && \
     . venv/bin/activate && \
-    pip install knowledge-storm && \
+    # pip install knowledge-storm && \
     pip install -r requirements.txt && \
     pip install trafilatura==1.11.0
 
