--- a/frontend/demo_light/docker-compose.yaml
+++ b/frontend/demo_light/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   storm_app:
-    build: .
+    image: public.ecr.aws/m0c5k4m4/storm:latest
     ports:
       - "5000:8501"
     env_file:
